--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,7 +10,7 @@
 
 @import 'helpers/helpers';
 
-// @import 'components/components';
+@import 'components/buttons';
 
 body {
   background-color: $light-gray;
