--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -49,6 +49,12 @@ table {
 .txt-chivo {
   font-family: 'Chivo', sans-serif; }
 
+.txt-chivo-light {
+  font-family: 'Chivo Light', sans-serif; }
+
+.txt-chivo-bold {
+  font-family: 'Chivo Bold', sans-serif; }
+
 .txt-helvetica-neue {
   font-family: 'Helvetica Neue', sans-serif; }
 
@@ -98,6 +104,9 @@ table {
   .txt-size-6 {
     font-size: 51px; } }
 
+.txt-white {
+  color: white; }
+
 .txt-blue {
   color: #5e97d1; }
 
@@ -128,6 +137,33 @@ a.txt-no-underline {
 
 .hide {
   display: none; }
+
+.link-transition {
+  transition: all 0.25s linear; }
+
+.btn {
+  background-color: #5e97d1;
+  color: white;
+  border: 0;
+  font-size: 13px;
+  font-family: 'Chivo', sans-serif;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  border-radius: 50px;
+  padding: 15px 25px;
+  transition: all 0.25s linear;
+  min-width: 150px; }
+  @media (min-width: 600px) {
+    .btn {
+      font-size: 14px; } }
+
+.btn:hover {
+  background-color: #407fc0;
+  cursor: pointer;
+  transition: all 0.25s linear; }
+
+.btn:disabled {
+  background-color: rgba(94, 151, 209, 0.4); }
 
 body {
   background-color: whitesmoke;
