--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -141,6 +141,28 @@ a.txt-no-underline {
 .link-transition {
   transition: all 0.25s linear; }
 
+.header {
+  margin: 60px 0 30px 0; }
+
+.product-wrapper {
+  background-color: white;
+  display: flex;
+  margin-bottom: 25px; }
+
+.product-details-wrapper {
+  width: 100%;
+  padding: 30px 60px 30px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+
+.product-title-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 25px; }
+
 .btn {
   background-color: #5e97d1;
   color: white;
@@ -169,3 +191,9 @@ body {
   background-color: whitesmoke;
   color: #292929;
   font-family: 'Helvetica Neue', sans-serif; }
+
+.container {
+  width: 90%;
+  max-width: 1300px;
+  margin: auto;
+  margin-bottom: 70px; }
