--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,3 +1,12 @@
-.header {
+.header-wrapper {
   margin: 60px 0 30px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .cart-text {
+    margin-left: 5px;
+    position: relative;
+    top: -1px;
+  }
 }
