--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -141,8 +141,15 @@ a.txt-no-underline {
 .link-transition {
   transition: all 0.25s linear; }
 
-.header {
-  margin: 60px 0 30px 0; }
+.header-wrapper {
+  margin: 60px 0 30px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .header-wrapper .cart-text {
+    margin-left: 5px;
+    position: relative;
+    top: -1px; }
 
 .product-wrapper {
   background-color: white;
