--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 
 @import 'components/header';
 @import 'components/product';
+@import 'components/cart';
 @import 'components/buttons';
 
 body {
