--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -10,8 +10,12 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  opacity: 0;
+  z-index: -1;
+  transition: $link-transition;
 
   .cart-contents {
+    position: relative;
     background-color: $white;
     width: 50%;
     max-width: 1300px;
@@ -21,6 +25,17 @@
     -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
     -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
     box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
+  }
+
+  .cart-close-icon {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 400;
+  }
+
+  .cart-close-icon:hover {
+    cursor: pointer;
   }
 
   .cart-header {
