--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -192,8 +192,12 @@ a.txt-no-underline {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; }
+  min-height: 100vh;
+  opacity: 0;
+  z-index: -1;
+  transition: all 0.25s linear; }
   .cart-wrapper .cart-contents {
+    position: relative;
     background-color: white;
     width: 50%;
     max-width: 1300px;
@@ -203,6 +207,13 @@ a.txt-no-underline {
     -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17);
     -moz-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17);
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17); }
+  .cart-wrapper .cart-close-icon {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 400; }
+  .cart-wrapper .cart-close-icon:hover {
+    cursor: pointer; }
   .cart-wrapper .cart-header {
     padding-bottom: 15px;
     border-bottom: 1px solid #d8d8d8; }
