Add class to cart to toggle modal when cart status is isActive

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -196,6 +196,10 @@ a.txt-no-underline {
   opacity: 0;
   z-index: -1;
   transition: all 0.25s linear; }
+  .cart-wrapper.cart-active {
+    opacity: 1;
+    z-index: 500;
+    transition: all 0.25s linear; }
   .cart-wrapper .cart-contents {
     position: relative;
     background-color: white;
