--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -13,6 +13,12 @@
   opacity: 0;
   z-index: -1;
   transition: $link-transition;
+  
+  &.cart-active {
+    opacity: 1;
+    z-index: 500;
+    transition: $link-transition;
+  }
 
   .cart-contents {
     position: relative;
