--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -2,20 +2,46 @@
   background-color: $white;
   display: flex;
   margin-bottom: 25px;
+
+  .product-details-wrapper {
+    width: 100%;
+    padding: 30px 60px 30px 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .product-title-price {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 1.5rem;
+  }
+
+  .remove-button {
+    @include txt-warning();
+    @include txt-size-3();
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .quantity-adjustment {
+    white-space: nowrap;
+  }
+
+  .product-quantity {
+    min-width: 95px;
+    display: inline-block;
+    text-align: center;
+    border-top: 2px solid $gray-btn;
+    border-bottom: 2px solid $gray-btn;
+    box-sizing: border-box;
+    padding-top: 15px; // TODO: better way to handle this
+    padding-bottom: 16px; // TODO: better way to handle this
+  }
 }
 
-.product-details-wrapper {
-  width: 100%;
-  padding: 30px 60px 30px 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
 
-.product-title-price {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  margin-bottom: 25px;
-}
+
