--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -1,18 +1,23 @@
 .cart-wrapper {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: $gray-bg-color;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  background-color: $white;
   opacity: 0;
   z-index: -1;
   transition: $link-transition;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  @include mq-lg() {
+    background-color: $gray-bg-color;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+
+  }
   
   &.cart-active {
     opacity: 1;
@@ -23,21 +28,29 @@
   .cart-contents {
     position: relative;
     background-color: $white;
-    width: 50%;
-    max-width: 1300px;
+    min-width: 50%;
+    max-width: $max-width;
     min-height: 40%;
     padding: 5%;
-    border-radius: 14px;
-    -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
-    -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
-    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
+    @include mq-lg() {
+      border-radius: 14px;
+      -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
+      -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
+      box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
+    }
   }
 
   .cart-close-icon {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 1rem;
+    right: 1rem;
     z-index: 400;
+    width: 25px;
+    @include mq-lg() {
+      top: 2rem;
+      right: 2rem;
+      width: 32px;
+    }
   }
 
   .cart-close-icon:hover {
@@ -89,7 +102,10 @@
 .empty-cart-wrapper {
   text-align: center;
   .empty-cart-icon {
-    margin: 25% 0 25px 0;
+    margin: 20% 0 2rem 0;
+    @include mq-xl() {
+      margin: 15% 0 2rem 0;
+    }
   }
   .empty-cart-text {
     margin: auto;
