--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -311,20 +311,24 @@ a:hover {
     padding-bottom: 16px; }
 
 .cart-wrapper {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #dcdee0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  background-color: white;
   opacity: 0;
   z-index: -1;
-  transition: all 0.25s linear; }
+  transition: all 0.25s linear;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
+  @media (min-width: 950px) {
+    .cart-wrapper {
+      background-color: #dcdee0;
+      position: fixed;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh; } }
   .cart-wrapper.cart-active {
     opacity: 1;
     z-index: 500;
@@ -332,19 +336,27 @@ a:hover {
   .cart-wrapper .cart-contents {
     position: relative;
     background-color: white;
-    width: 50%;
+    min-width: 50%;
     max-width: 1300px;
     min-height: 40%;
-    padding: 5%;
-    border-radius: 14px;
-    -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17);
-    -moz-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17);
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17); }
+    padding: 5%; }
+    @media (min-width: 950px) {
+      .cart-wrapper .cart-contents {
+        border-radius: 14px;
+        -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17);
+        -moz-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17);
+        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.17); } }
   .cart-wrapper .cart-close-icon {
     position: absolute;
-    top: 20px;
-    right: 20px;
-    z-index: 400; }
+    top: 1rem;
+    right: 1rem;
+    z-index: 400;
+    width: 25px; }
+    @media (min-width: 950px) {
+      .cart-wrapper .cart-close-icon {
+        top: 2rem;
+        right: 2rem;
+        width: 32px; } }
   .cart-wrapper .cart-close-icon:hover {
     cursor: pointer; }
   .cart-wrapper .cart-header {
@@ -381,7 +393,10 @@ a:hover {
 .empty-cart-wrapper {
   text-align: center; }
   .empty-cart-wrapper .empty-cart-icon {
-    margin: 25% 0 25px 0; }
+    margin: 20% 0 2rem 0; }
+    @media (min-width: 1280px) {
+      .empty-cart-wrapper .empty-cart-icon {
+        margin: 15% 0 2rem 0; } }
   .empty-cart-wrapper .empty-cart-text {
     margin: auto;
     width: 50%;
