--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -32,6 +32,7 @@
     max-width: $max-width;
     min-height: 40%;
     padding: 5%;
+    overflow-y: scroll;
     @include mq-lg() {
       border-radius: 14px;
       -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.17);
@@ -68,8 +69,49 @@
 .active-cart-wrapper {
   margin-top: 1.5rem;
 
+  .product-wrapper {
+    margin-bottom: 0;
+  }
+
+  .product-image-wrapper {
+    width: 30%;
+    @include mq-lg() {
+      width: 50%;
+    }
+  }
+  
+  .product-details-wrapper {
+    padding: 1% 3%;
+    width: 60%;
+    @include mq-lg() {
+      width: 50%;
+    }
+  }
+
+  .product-title-price {
+    display: block;
+    @include mq-md() {
+      display: flex;
+    }
+  }
+
+  .quantity-adjustment {
+    margin-top: 2rem;
+    width: 100%;
+    text-align: center;
+    @include mq-md() {
+      text-align: right;
+    }
+  }
+
   .cart-product-wrapper {
-    display: flex;
+    margin-bottom: 2rem;
+    @include mq-md() {
+      margin-bottom: 1.5rem;
+    }
+    @include mq-lg() {
+      margin-bottom: 2rem;
+    }
   }
 }
 
